# NaviSimulators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
AIS/: CMakeLists.txt
AIS/include/: AisStructures.h  BaseAISSimulator.h  SimulatorAIS.h  Type123Simulator.h  Type5Simulator.h
AIS/include/ATON/: PageATON.h  Type21Simulator.h
AIS/include/BasePage/: BaseAisPage.h
AIS/include/ClassA/: ClassAPage.h  Type123Simulator.h
AIS/include/ClassB/: ClassBPage.h  Type18Simulator.h  Type19Simulator.h
AIS/include/RemoteAis/: RemoteAis.h
AIS/include/SAR/: PageSAR.h  Type9Simulator.h
AIS/src/: AisStructures.cpp  SimulatorAIS.cpp  Type123Simulator.cpp  Type5Simulator.cpp  main.cpp
AIS/src/ATON/: PageATON.cpp  Type21Simulator.cpp
AIS/src/BasePage/: BaseAisPage.cpp
AIS/src/ClassA/: ClassAPage.cpp  Type123Simulator.cpp  Type5Simulator.cpp
AIS/src/ClassB/: ClassBPage.cpp  Type18Simulator.cpp  Type19Simulator.cpp
AIS/src/RemoteAis/: RemoteAis.cpp
AIS/src/SAR/: PageSAR.cpp  Type9Simulator.cpp
AIS/ui/: SimulatorAIS.ui  Type123Simulator.ui  Type5Simulator.ui
AIS/ui/ATON/: PageATON.ui  Type21Simulator.ui
AIS/ui/ClassA/: ClassAPage.ui  Type123Simulator.ui
AIS/ui/ClassB/: ClassBPage.ui  Type18Simulator.ui  Type19Simulator.ui
AIS/ui/RemoteAis/: RemoteAis.ui
AIS/ui/SAR/: PageSAR.ui  Type9Simulator.ui
ARPA/: CMakeLists.txt
ARPA/include/: ARPA.h  TargetModel.h
ARPA/src/: ARPA.cpp  TargetModel.cpp
ARPA/ui/: ARPA.ui
Compas/: CMakeLists.txt
Compas/include/: Compas.h  Compass.h
Compas/src/: Compas.cpp  Compass.cpp  main.cpp
Compas/translations/: CompassPlugin_en.qm  CompassPlugin_en.ts  CompassPlugin_ru.qm  CompassPlugin_ru.ts  trCompass.qrc
Compas/ui/: Compas.ui  Compass.ui
EchoSounder/: CMakeLists.txt
EchoSounder/include/: EchoSounder.h
EchoSounder/src/: EchoSounder.cpp  main.cpp
EchoSounder/ui/: EchoSounder.ui
LagAbs/: CMakeLists.txt
LagAbs/include/: LagAbs.h
LagAbs/src/: LagAbs.cpp  main.cpp
LagAbs/ui/: LagAbs.ui
LagRelative/: CMakeLists.txt
LagRelative/include/: LagRel.h
LagRelative/src/: LagRel.cpp  main.cpp
LagRelative/ui/: LagRel.ui
SNS/: CMakeLists.txt  SNS.md
SNS/include/: SNS.h
SNS/src/: SNS.cpp
SNS/translations/: SNSPlugin_en.qm  SNSPlugin_en.ts  SNSPlugin_ru.qm  SNSPlugin_ru.ts  trSNSPlugin.qrc
SNS/ui/: SNS.ui
ToolBoxWidget/: CMakeLists.txt
ToolBoxWidget/include/: ToolBox.h  ToolItem.h
ToolBoxWidget/src/: ToolItem.cpp
Weather/: CMakeLists.txt
Weather/include/: Weather.h
Weather/src/: Weather.cpp  main.cpp
Weather/ui/: Weather.ui
